Fix an error with the buttons in the ItemView not being aligned in widths smaller than 1010px

--- a/views/ItemView/ItemView.module.scss
+++ b/views/ItemView/ItemView.module.scss
@@ -112,4 +112,8 @@
   width: 20rem;
   height: 4.45rem;
   margin-left: 2vw;
+
+  @media (width < 1010px) {
+    margin-left: 5px;
+  }
 }
